--- a/src/particle.css
+++ b/src/particle.css
@@ -1,46 +1,23 @@
-.bg {
-	animation:slide 10s ease-in-out infinite alternate;
-	background-image: linear-gradient(-60deg, rgb(240, 178, 241) 50%, #09f 50%);
-	bottom:0;
-	left:-50%;
-	opacity:.5;
-	position:fixed;
-	right:-50%;
-	top:0;
-	z-index:-1;
+.bg{
+	display: flex;
+	min-height: 100vh;
+	margin: 0;
+	align-items: center;
+	justify-content: center;
+	background-color: #bfdfec;
+	font-family: system-ui, calibri, serif;
+	background-repeat: repeat-x;
+	background-image: url("https://i.stack.imgur.com/b7z29.png");
+	animation: movement 10s linear infinite;
+	z-index: -100;
   }
-  
-  .bg2 {
-	animation-direction:alternate-reverse;
-	animation-duration:11s;
-  }
-  
-  .bg3 {
-	animation-duration:12s;
-  }
-  
-  .content {
-	background-color:rgba(255,255,255,.8);
-	border-radius:.25em;
-	box-shadow:0 0 .25em rgba(0,0,0,.25);
-	box-sizing:border-box;
-	left:50%;
-	padding:10vmin;
-	position:fixed;
-	text-align:center;
-	top:50%;
-	transform:translate(-50%, -50%);
-  }
-  
-  h1 {
-	font-family:monospace;
-  }
-  
-  @keyframes slide {
+
+  @keyframes movement {
 	0% {
-	  transform:translateX(-25%);
+	  background-position: 0px 0px;
 	}
 	100% {
-	  transform:translateX(25%);
+	  background-position: 560px 0px;
 	}
   }
+  
